<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillinTheBlankQuestionActivity">
<!--    tools:context=".MultipleChoiceQuestionActivity">-->

<!--fill-in-the-blank question-->

    <TextView
        android:id="@+id/FillinTheBlankQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_the_blank_question1" />

    <EditText
        android:id="@+id/Answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/answer1" />

    <Button
        android:id="@+id/SubmitFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="submitFill"/>

    <TextView
        android:id="@+id/timerA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerA" />

    <TextView
        android:id="@+id/timerB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerB" />
</LinearLayout>