<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultipleChoiceQuestionActivity">
<!--    tools:context=".MultipleChoiceQuestionActivity">-->

<!--multiple-choice question-->
    <TextView
        android:id="@+id/MultipleChoiceQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_choice_question1" />

    <Spinner
        android:id="@+id/Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/options"/>

    <Button
        android:id="@+id/SubmitMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:onClick="submitMulti"/>

    <TextView
        android:id="@+id/timerA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerA" />

    <TextView
        android:id="@+id/timerB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timerB" />

</LinearLayout>